Modified README.md and added discount table in order to make the discount generic